@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4239] Feature: Update the Google geocoding to V3
 - [#4237] Cleanup: Use the new class names for the Geocoding classes
 - [#4195] Fix: Fix crash in TYPO3 4.6 by calling parent::__construct instead of the old PHP4 style constructors
 - [#4154] Feature: Add List::inRange
